<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="200dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:visibility="visible">

            <Button
                android:id="@+id/reset_btn"
                style="@style/Widget.App.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/reset"
                app:icon="@drawable/ic_refresh_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reason_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/register_stock_reason"
                app:endIconMode="dropdown_menu"
                app:endIconTint="@color/gray_500"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reset_btn">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/reason_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:paddingTop="30dp"
                    android:paddingBottom="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/register_stock_scan_container"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reason_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/container_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionSend"
                    android:inputType="textFilter"
                    android:textColor="@color/gray_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/register_stock_scan_item"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionSend"
                    android:inputType="textFilter"
                    android:textColor="@color/gray_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/scanned_items_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/register_stock_items_scanned"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/gray_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_til" />

            <View
                android:id="@+id/item_list_divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scanned_items_title_tv" />

            <TextView
                android:id="@+id/scanned_items_error_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/red_600"
                android:textSize="12sp"
                android:text="@string/register_stock_add_at_least_one_product_to_stock_msg"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_list_divider1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scanned_items_error_tv"
                tools:itemCount="2"
                tools:listitem="@layout/item_product" />

            <TextView
                android:id="@+id/placeholder_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/msg_start_scan_for_add_items"
                android:textColor="@color/gray_500"
                app:layout_constraintBottom_toBottomOf="@+id/item_recycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_recycler" />

            <View
                android:id="@+id/item_list_divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_recycler" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_stock_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_list_divider2"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>