<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1×" />

    <TextView
        android:id="@+id/product_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/count_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:lines="2"
        tools:text="@tools:sample/lorem/random" />

    <Button
        android:id="@+id/remove_item_btn"
        style="@style/Widget.App.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red_600"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/product_remove_1_label"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:cornerRadius="2dp"
        app:icon="@drawable/ic_delete_32"
        app:iconSize="16dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/remove_all_btn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_title_tv" />

    <Button
        android:id="@+id/remove_all_btn"
        style="@style/Widget.App.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/product_remove_all_label"
        android:textColor="@color/red_600"
        android:textStyle="normal"
        app:cornerRadius="2dp"
        app:icon="@drawable/ic_delete_32"
        app:iconTint="@color/red_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/info_btn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/remove_item_btn"
        app:layout_constraintTop_toBottomOf="@+id/product_title_tv"
        app:strokeColor="@color/red_600" />

    <Button
        android:id="@+id/info_btn"
        style="@style/Widget.App.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray_100"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/product_info_label"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:cornerRadius="2dp"
        app:icon="@drawable/ic_info_12"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/remove_all_btn"
        app:layout_constraintTop_toBottomOf="@+id/product_title_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>